SRC_CONTROL_DIR = src/Control
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_CONTROL_DIR)

MSQ_SRCS += \
	$(SRC_CONTROL_DIR)/InstructionQueue.cpp \
	$(SRC_CONTROL_DIR)/TerminationCriterion.cpp 

MSQ_HDRS += \
	$(SRC_CONTROL_DIR)/Instruction.hpp \
	$(SRC_CONTROL_DIR)/InstructionQueue.hpp \
	$(SRC_CONTROL_DIR)/TerminationCriterion.hpp 

