SRC_MAPPINGFUNCTION_DIR = src/MappingFunction
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_MAPPINGFUNCTION_DIR)

MSQ_SRCS += \
	$(SRC_MAPPINGFUNCTION_DIR)/SamplePoints.cpp 

MSQ_HDRS += \
	$(SRC_MAPPINGFUNCTION_DIR)/MappingFunction.hpp \
	$(SRC_MAPPINGFUNCTION_DIR)/MappingFunctionSet.hpp \
	$(SRC_MAPPINGFUNCTION_DIR)/SamplePoints.hpp 

