SRC_MAPPINGFUNCTION_DIR = src/MappingFunction
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_MAPPINGFUNCTION_DIR)
INCLUDED_MAKEFILES += $(SRC_MAPPINGFUNCTION_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_MAPPINGFUNCTION_DIR)/MappingFunction.cpp \
	$(SRC_MAPPINGFUNCTION_DIR)/SamplePoints.cpp 

MSQ_HDRS += \
	$(SRC_MAPPINGFUNCTION_DIR)/MappingFunction.hpp \
	$(SRC_MAPPINGFUNCTION_DIR)/MappingFunctionSet.hpp \
	$(SRC_MAPPINGFUNCTION_DIR)/SamplePoints.hpp 

