SRC_TARGETCALCULATOR_DIR = src/TargetCalculator
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETCALCULATOR_DIR)

MSQ_SRCS += \
	$(SRC_TARGETCALCULATOR_DIR)/CachingTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/DefaultCornerTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealCornerTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdentityTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/JacobianCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/LVQDTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshCornerTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/ReferenceMesh.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetReader.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetWriter.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightReader.cpp 

MSQ_HDRS += \
	$(SRC_TARGETCALCULATOR_DIR)/CachingTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/ConcreteTargetCalculators.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/DefaultCornerTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealCornerTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdentityTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/JacobianCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/LVQDTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshCornerTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/ReferenceMesh.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetReader.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetWriter.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/UnitWeight.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightReader.hpp 

