SRC_TARGETCALCULATOR_DIR = src/TargetCalculator
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETCALCULATOR_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGETCALCULATOR_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_TARGETCALCULATOR_DIR)/AspectFactor.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/CachingTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdentityTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/InverseMetricWeight.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/JacobianCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/LambdaTarget.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/LambdaConstant.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/LVQDTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/MetricWeight.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/OrientFactor.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/ReferenceMesh.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefSizeTargetCalculator.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/RemainingWeight.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/SizeFactor.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/SkewFactor.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetReader.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetWriter.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/TetDihedralWeight.cpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightReader.cpp 

MSQ_HDRS += \
	$(SRC_TARGETCALCULATOR_DIR)/AspectFactor.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/CachingTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdealTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/IdentityTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/InverseMetricWeight.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/JacobianCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/LambdaTarget.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/LambdaConstant.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/LVQDTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/MetricWeight.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/OrientFactor.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefMeshTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/ReferenceMesh.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/RefSizeTargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/RemainingWeight.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/SizeFactor.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/SkewFactor.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetAspect.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetOrientation.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetReader.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetSize.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetSkew.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TargetWriter.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/TetDihedralWeight.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightCalculator.hpp \
	$(SRC_TARGETCALCULATOR_DIR)/WeightReader.hpp 

