SRC_TARGETMETRIC_DIR = src/TargetMetric
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETMETRIC_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGETMETRIC_DIR)/Makefile.am

MSQ_SRCS += $(SRC_TARGETMETRIC_DIR)/AWMetric.cpp \
            $(SRC_TARGETMETRIC_DIR)/TMetric.cpp \
	    $(SRC_TARGETMETRIC_DIR)/TMPCommon.hpp \
	    $(SRC_TARGETMETRIC_DIR)/TMPDerivs.hpp 

MSQ_HDRS += $(SRC_TARGETMETRIC_DIR)/AWMetric.hpp \
            $(SRC_TARGETMETRIC_DIR)/TMetric.hpp 
	    

